--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
   <meta charset="UTF-8">
 
-  <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<!-- Link to my CSS file -->
+	<link href="tribute-css.css" rel="stylesheet" type="text/css">
+
 
   <title>Personal Portfolio- FCC project 2</title>
-  
-  
   
   
   
@@ -16,14 +18,39 @@
 
 <body>
   <header>
-  <div class="container-fluid">
-    <nav>
-      
-    </nav>
-  </div>
-</header>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+  
+  	<!-- Navbar starts here -->
+  	<nav class="navbar navbar-default">
+ 
+    	<!-- Container that makes navbar extend across the full width of the screen-->
+    	<div class="container-fluid">
+ 
+      		<!-- Brand and toggle get grouped for better mobile display -->
+      		<div class="navbar-header">
+ 
+        		<!-- Usually, the name of the company goes here. We'll use a summary phrase. -->
+        		<a class="navbar-brand" href="#">Mary Beth's Projects Vault</a>
+      		</div>  	 
 
+    	</div> <!-- End of div that holds the navbar -->
+    
+  	</nav> <!-- Navbar ends here -->
+
+  </header>
+
+  <header>
+  	<div class="intro-text">
+  		<p>
+  			"Software Engineering student enrolled in <a href="https://techtonica.org/">Techtonica's</a> current cohort."
+  		</p>
+  	</div>
+
+  </header>
+
+
+
+  	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   
 </body>
 </html>
