added a list for my projects

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       		<!-- Brand and toggle get grouped for better mobile display -->
       		<div class="navbar-header">
  
-        		<!-- Usually, the name of the company goes here. We'll use a summary phrase. -->
+        		<!-- page title -->
         		<a class="navbar-brand" href="#">Mary Beth's Projects Vault</a>
       		</div>  	 
 
@@ -41,11 +41,23 @@
   <header>
   	<div class="intro-text">
   		<p>
-  			"Software Engineering student enrolled in <a href="https://techtonica.org/">Techtonica's</a> current cohort."
+  			Software Engineering student in <a href="https://techtonica.org/">Techtonica's</a> current cohort learning full stack JavaScript development.
   		</p>
   	</div>
 
   </header>
+
+  	<div>
+  		<p>
+  		  <h3>Check out some of my projects:</h3>
+  			<ul>
+  				<li></li>
+  				<li></li>
+  				<li></li>
+
+  			</ul>
+  		</p>
+  	</div>
 
 
 
