--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="UTF-8">
 
-  	<!-- Latest compiled and minified CSS -->
+  <!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 	<!-- Link to my CSS file -->
-	<link href="tribute-css.css" rel="stylesheet" type="text/css">
+	<link href="styles.css" rel="stylesheet" type="text/css">
+
+  <!-- Link to Roboto Slab google font -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Roboto+Slab">
 
 
-  <title>Personal Portfolio- FCC project 2</title>
+  <title>Personal Portfolio</title>
   
   
   
