adding background image, changing color scheme

--- a/index.html
+++ b/index.html
@@ -20,52 +20,55 @@
 </head>
 
 <body>
-  <header>
+  <div>
+    <header>
   
-  	<!-- Navbar starts here -->
-  	<nav class="navbar navbar-default">
+  	 <!-- Navbar starts here -->
+  	 <nav class="navbar navbar-default">
  
-    	<!-- Container that makes navbar extend across the full width of the screen-->
-    	<div class="container-fluid">
+    	 <!-- Container that makes navbar extend across the full width of the screen-->
+    	 <div class="container-fluid">
  
-      		<!-- Brand and toggle get grouped for better mobile display -->
-      		<div class="navbar-header">
+      		  <!-- Brand and toggle get grouped for better mobile display -->
+      		  <div class="navbar-header">
  
-        		<!-- page title -->
-        		<a class="navbar-brand" href="#">Mary Beth's Projects Vault</a>
-      		</div>  	 
+        		  <!-- page title -->
+        		  <a class="navbar-brand" href="#">Mary Beth's Projects Vault</a>
+      		  </div>  	 
 
-    	</div> <!-- End of div that holds the navbar -->
+    	 </div> <!-- End of div that holds the navbar -->
     
-  	</nav> <!-- Navbar ends here -->
+  	 </nav> <!-- Navbar ends here -->
 
-  </header>
-
-  <header>
-  	<div class="intro-text">
-  		<p>
+    </header>
+  <div class="outer-layer">
+    <header>
+  	 <div class="intro-text">
+  		  <p>
   			Software Engineering student in <a href="https://techtonica.org/">Techtonica's</a> current cohort learning full stack JavaScript development.
-  		</p>
-  	</div>
+  		  </p>
+  	 </div>
 
-  </header>
+    </header>
 
-  	<div>
-  		<p>
-  		  <h3>Check out some of my projects:</h3>
-  			<ul>
-  				<li></li>
-  				<li></li>
-  				<li></li>
+  	 <div>
+  		  <p>
+  		    <h3>Check out some of my projects:</h3>
+  			   <ul>
+  				  <li></li>
+  				  <li></li>
+  				  <li></li>
 
-  			</ul>
-  		</p>
-  	</div>
+  			   </ul>
+  		  </p>
+  	 </div>
 
 
 
   	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  
+
+</div>
+</div>  
 </body>
 </html>
