add section tags and Contact Me section

--- a/index.html
+++ b/index.html
@@ -43,26 +43,34 @@
     </header>
   <div class="outer-layer">
     <header>
-  	 <div class="intro-text">
-  		  <p>
-  			Software Engineering student in <a href="https://techtonica.org/">Techtonica's</a> current cohort learning full stack JavaScript development.
-  		  </p>
-  	 </div>
-
+      <section>
+  	   <div class="intro-text">
+        <p><h2>About Me</h2></p>
+  		  <p>Software Engineering student in <a href="https://techtonica.org/">Techtonica's</a> current cohort learning full stack JavaScript development.</p>
+  	   </div>
+      </section>
     </header>
 
-  	 <div>
-  		  <p>
-  		    <h3>Check out some of my projects:</h3>
-  			   <ul>
-  				  <li></li>
-  				  <li></li>
-  				  <li></li>
+      <section>
+        <div>
+  		    <p>
+  		      <h2>Check out some of my projects:</h2>
+  			     <ul>
+  				    <li></li>
+  				    <li></li>
+  				    <li></li>
 
-  			   </ul>
-  		  </p>
-  	 </div>
+  			     </ul>
+  		    </p>
+  	    </div>
+      </section>
 
+      <section>
+        <p><h2>Contact Me</h2></p>
+          <p></p>
+
+
+      </section>
 
 
   	<!-- Latest compiled and minified JavaScript -->
